Add buttons events

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,53 +1,4 @@
-.page-container {
-  height: 100vh;
-  width: 100vw;
-
-  display: flex;
-  flex-direction: column;
-}
-
-/* HEADER */
-.header-container {
-  flex: 0.1;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
-  background-color: var(--background-color);
-}
-
-.title {
-  font-size: 2.5rem;
-}
-
-.title > span {
-  color: var(--main-color);
-  font-weight: bolder;
-}
-
-.buttons-container {
-  display: flex;
-  gap: 20px;
-}
-
-.menu-button {
-  background: none;
-  border: none;
-
-  color: var(--letter-color);
-  font-size: 1.5rem;
-
-  cursor: pointer;
-}
-
-.menu-button:hover {
-  color: var(--main-color);
-  text-decoration: underline;
-}
-
-/* MAIN */
-.main-container {
+.home-container {
   position: relative;
   flex: 0.9;
 
