--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,9 +1,4 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
+/* GENERAL */
 :root {
   --letter-color: #eee;
   --background-color: #111;
@@ -11,8 +6,68 @@
   --hover-effect: #60513f;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   color: var(--letter-color);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.page-container {
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+}
+
+/* HEADER */
+.header-container {
+  flex: 0.1;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  background-color: var(--background-color);
+}
+
+.title {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.title > span {
+  color: var(--main-color);
+  font-weight: bolder;
+}
+
+.buttons-container {
+  display: flex;
+  gap: 20px;
+}
+
+.menu-button {
+  background: none;
+  border: none;
+
+  color: var(--letter-color);
+  font-size: 1.5rem;
+
+  cursor: pointer;
+}
+
+.active {
+  color: var(--main-color);
+  text-decoration: underline;
+}
+
+.menu-button:hover {
+  color: var(--main-color);
+  text-decoration: underline;
 }
