--- a/src/css/home.css
+++ b/src/css/home.css
@@ -9,8 +9,9 @@
 }
 
 .question {
-  margin-top: 200px;
+  margin-top: 150px;
   font-size: 7rem;
+  text-align: center;
 }
 
 .book-button {
@@ -40,4 +41,14 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+@media (max-width: 1000px) {
+  .home-image {
+    display: none;
+  }
+
+  .home-container {
+    background-color: var(--background-color);
+  }
 }
