--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,1 +1,33 @@
+.menu-container {
+  flex: 0.9;
 
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 50px;
+
+  background-color: var(--background-color);
+}
+
+.menu-title {
+  align-self: flex-start;
+  margin: 20px 0 0 50px;
+  font-size: 1.5rem;
+}
+
+.menu-title > span {
+  color: var(--main-color);
+}
+
+.plates-container {
+  width: 50%;
+
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.plates-container > img {
+  height: 350px;
+}
