Add some responsive

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -4,9 +4,9 @@
   background-color: var(--background-color);
 
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-  gap: 200px;
+  gap: 100px;
 
   flex-wrap: wrap;
 
@@ -15,6 +15,7 @@
 
 .inputs-container {
   margin-top: 50px;
+  flex: 0.5;
 }
 
 .label,
@@ -31,11 +32,12 @@
   gap: 5px;
   font-weight: bolder;
   text-transform: uppercase;
+  width: 100%;
 }
 
 .area,
 .input {
-  min-width: 500px;
+  width: 100%;
   font-size: 1.3rem;
   padding: 10px 10px;
 
@@ -78,4 +80,20 @@
 
 .icons-container > svg:hover {
   color: var(--main-color);
+}
+
+@media (max-width: 800px) {
+  .contact-container {
+    gap: 30px;
+  }
+
+  .input,
+  .area {
+    min-width: 300px;
+  }
+
+  .social-container {
+    align-self: flex-start;
+    margin-bottom: 50px;
+  }
 }
