--- a/src/css/global.css
+++ b/src/css/global.css
@@ -73,6 +73,7 @@ body {
   text-decoration: underline;
 }
 
+/* RESPONSIVE */
 @media (max-width: 800px) {
   .header-container {
     padding: 20px;
