--- a/src/css/home.css
+++ b/src/css/home.css
@@ -20,6 +20,7 @@
   color: var(--letter-color);
   padding: 20px 30px;
   border-radius: 30px;
+  border: none;
 
   font-size: 3rem;
   cursor: pointer;
